[package]
name = "llm-gateway-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "fs"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "migrate"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# 日志和监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"

# 异步和并发
futures = "0.3"
 futures-util = "0.3"
bytes = "1.5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
num-traits = "0.2"

# 缓存
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
async-trait = "0.1"

# 错误处理和工具
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"

# 加密和安全
bcrypt = "0.15"
jsonwebtoken = "9.2"
md5 = "0.7"

# 环境变量
dotenv = "0.15"

[[bin]]
name = "test_redis_connection"
path = "test_redis_connection.rs"

[[bin]]
name = "test_redis_integration"
path = "test_redis_integration.rs"

